<resources>
    <string name="app_name">EzFood</string>
    <string name="ezfood">EzFood</string>
    <string name="don_t_starve">Don\'t starve</string>
    <string name="snacks">Snacks</string>
    <string name="cart">Cart</string>
    <string name="pay">Pay</string>
    <string name="top_up">Top Up</string>
    <string name="eat_fresh">Eat fresh</string>
    <string name="good_time_great_taste">Good time,Great taste</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>

</resources>