<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#545453"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_restaurant_menu_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/fugaz_one"
            android:text="@string/good_time_great_taste"
            android:textColor="#000000"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/eat_fresh"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/food_col"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/food_pict"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/fugaz_one"
                        android:text="@string/food"
                        android:textSize="24sp"
                        />

                    <ImageView
                        android:id="@+id/food_pict"
                        android:layout_width="135dp"
                        android:layout_height="126dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/_1"
                        app:srcCompat="@drawable/food" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/drink_col"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/drinks_pict"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/fugaz_one"
                        android:text="@string/drinks"
                        android:textSize="24sp"
                        />

                    <ImageView
                        android:id="@+id/drinks_pict"
                        android:layout_width="135dp"
                        android:layout_height="126dp"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/juice" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/snack_col"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/snacks_pict"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/fugaz_one"
                        android:text="@string/snacks"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/snacks_pict"
                        android:layout_width="135dp"
                        android:layout_height="126dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ice_cream" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/topup_col"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cart_pict"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/fugaz_one"
                        android:text="@string/top_up"
                        android:textSize="24sp" />

                    <ImageView
                        android:id="@+id/cart_pict"
                        android:layout_width="135dp"
                        android:layout_height="126dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/topup" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>